# pg_graphql_server

./: Cargo.toml  pg_graphql_server.control
.cargo/: config.toml
src/: config.rs  lib.rs  server.rs
src/handlers/: asset.rs  context.rs  errors.rs  graphiql.rs  graphql.rs  health.rs  mod.rs
src/handlers/test_data/: test_txt_copy_out_query.data
