[package]
name = "pg_graphql_server"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.2"
async-graphql = "7.0"
async-graphql-axum = "7.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "tracing", "signal"] }
tower-http = { version = "0.5", features = ["trace", "timeout"] }
axum = { version = "0.7", default-features = false, features = ["json", "query", "tokio", "http2", "matched-path", "original-uri", "tower-log", "tracing" ] }
tokio-postgres = { version = "0.7" }
sqlx = { version = "0.7", features = [ "postgres", "json", "runtime-tokio" ] }
log = "0.4"
tracing = "0.1"
console-subscriber = "0.2"
tracing-subscriber = "0.3"
thiserror = "1.0.50"
serde_json = "1.0"
libc = "0.2"
const_format = "0.2.31"
predicates = "3.0.4"
tokio-stream = "0.1.14"
bytes = "1.5.0"
futures = "0.3.29"
combine = "4.6.6"
axum-macros = "0.4.0"
futures-concurrency = "7.4.3"
regex = "1.10.2"
mime_guess = "2.0.4"
opentelemetry = "0.21"
tracing-opentelemetry = "0.22"
opentelemetry-jaeger = "0.20"

[dev-dependencies]
pgrx-tests = "=0.11.2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
